code smell fixed